--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "clean": "rimraf dist",
     "build": "npm run clean && tsc --project ./",
-    "start": "nodemon src/index.ts"
+    "start": "nodemon --exec ts-node src/index.ts"
   },
   "author": "",
   "license": "ISC",
