--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@line/bot-sdk": "^9.0.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.24",
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "nodemon": "^3.1.0",
     "rimraf": "^5.0.5",
