--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^20.11.24",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "mongodb": "^6.4.0",
     "nodemon": "^3.1.0",
     "rimraf": "^5.0.5",
     "ts-node": "^10.9.2",
